chore: task_id=1156867193004172636 remove log and fix float template overlapped issue

--- a/src/components/page-root/index.module.less
+++ b/src/components/page-root/index.module.less
@@ -48,7 +48,6 @@
 .selected {
   outline-offset: -1px;
   outline: #1A4BFF solid 1px;
-  z-index: 99;
 
   .topLeft {
     top: -3px;
