--- a/src/pages/editor/edit-wrapper/index.module.less
+++ b/src/pages/editor/edit-wrapper/index.module.less
@@ -34,7 +34,6 @@
 .selected {
   outline-style: solid;
   outline-color: #1A4BFF;
-  z-index: 99;
 
   .topLeft {
     top: -3px;
