--- a/src/pages/editor/float-template-panel/index.module.less
+++ b/src/pages/editor/float-template-panel/index.module.less
@@ -1,8 +1,9 @@
-.main {
+.floatTemplatePanel {
   position: absolute;
   bottom: 24px;
   left: 50%;
   transform: translateX(-50%);
+  z-index: 9999;
 }
 
 .hoverAnimation() {
